--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "black-formatter.args": ["--line-length=100"],
   "black-formatter.importStrategy": "fromEnvironment",
-  "nixEnvSelector.nixFile": "${workspaceFolder}/shell.nix"
+  "nixEnvSelector.nixFile": "${workspaceFolder}/shell.nix",
+  "black-formatter.interpreter": [
+    "${workspaceFolder}/.venv/bin/python"
+  ]
 }
